# simple-beacons

./: .gitignore  README.md
client/: meson.build
client/src/: client.c  client.h  commands.c  comms.c  mycert.pem  new-certs  tunnel.c
server/: README.md  meson.build
server/src/: commands.c  comms.c  server.c  server.h  tunnel.c
